build.gradle updated and gradle 10 ready, dependencies updated, minor fixes, deprecations removed, verion 0.2.5 prepared